# PairForge

./: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  meta.py
backend/app/api/: __init__.py  dependencies.py  events.py  exports.py  generation.py  imports.py  projects.py  questions.py  settings.py  system.py
backend/app/db/: migrations.py  models.py  session.py
backend/app/domain/: __init__.py  enums.py  errors.py
backend/app/importers/: __init__.py  base.py  dispatcher.py  doc_converter.py  docx_parser.py  markdown_parser.py  validation.py
backend/app/providers/: __init__.py  alibaba.py  base.py  capabilities.py  errors.py  openai_compatible.py  registry.py  size_rules.py  volcengine.py
backend/app/queue/: __init__.py  recovery.py  scheduler.py
backend/app/schemas/: __init__.py  imports.py
backend/app/security/: __init__.py  redaction.py  secrets.py
backend/app/services/: credentials.py  exporter.py  generation.py  global_settings.py  prompts.py  quota.py  quota_status.py  selections.py  worker.py
backend/app/storage/: __init__.py  images.py  layout.py  names.py
backend/tests/: conftest.py  factories.py  test_config.py  test_health.py
backend/tests/api/: test_credentials.py  test_global_settings.py  test_local_api.py  test_system.py
docs/plans/: 2026-07-24-seedream-4-5-adaptation-design.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
launcher/: main.py
scripts/: build-windows.ps1  start-dev.ps1
templates/: PairForge题库模板.docx
(+35 files in other folders)
